responsive düzenlemeleri yapıldı.

--- a/index.html
+++ b/index.html
@@ -204,58 +204,58 @@
         <section class="col-sm-9">
           <h2 id="vegetable" class="mb-3">Sebzeler</h2>
           <div class="row">
-            <div class="col">
+            <div class="col-sm">
               <div class="card">
                 <img src="img/pexels-pixabay-533280.jpg" alt="" style="width: 400px; height: 250px;" class="img-thumbnail w-100">
                 <p class="align-self-center">Domates</p>
               </div>
             </div>
-            <div class="col">
+            <div class="col-sm">
               <div class="card">
                 <img src="img/pexels-pixabay-87626.jpg" alt="" style="width: 400px; height: 250px;" class="img-thumbnail w-100">
                 <p class="align-self-center">Biber</p>
               </div>
             </div>
-            <div class="col">
+            <div class="col-sm">
               <div class="card">
                 <img src="img/pexels-zen-chung-5529596.jpg" alt="" style="width: 400px; height: 250px;" class="img-thumbnail w-100">
                 <p class="align-self-center">Patlıcan</p>
               </div>
             </div>
             <h2 id="fruid" class="mt-5 mb-3">Meyveler</h2>
-            <div class="col">
+            <div class="col-sm">
               <div class="card">
                 <img src="img/pexels-sarah-chai-7262994.jpg" alt="" style="width: 400px; height: 250px;" class="img-thumbnail w-100">
                 <p class="align-self-center">Portakal</p>
               </div>
             </div>
-            <div class="col">
+            <div class="col-sm">
               <div class="card">
                 <img src="img/pexels-dmitry-demidov-3903202.jpg" alt="" style="width: 400px; height: 250px;" class="img-thumbnail w-100">
                 <p class="align-self-center">Mandalina</p>
               </div>
             </div>
-            <div class="col">
+            <div class="col-sm">
               <div class="card">
                 <img src="img/pexels-ave-calvar-martinez-6944172.jpg" alt="" style="width: 400px; height: 250px;"  class="img-thumbnail w-100">
                 <p class="align-self-center">Çilek</p>
               </div>
             </div>
             <h2 id="drink" class="mt-5 mb-3">İçecekler</h2>
-            <div class="col">
+            <div class="col-sm">
               <div class="card">
                 <img src="img/pexels-timur-weber-8679343.jpg" alt="" style="width: 400px; height: 250px;" class="img-thumbnail w-100">
                 <p class="align-self-center">Portakal Suyu</p>
               </div>
             </div>
-            <div class="col">
+            <div class="col-sm">
               <div class="card">
                 <img src="img/pexels-charlotte-may-5946781.jpg " alt="" style="width: 400px; height: 250px;" class="img-thumbnail w-100">
                 <p class="align-self-center">Limonata</p>
               </div>
             </div>
           
-            <div class="col">
+            <div class="col-sm">
               <div class="card">
                 <img src="img/pexels-any-lane-5945669.jpg" alt="" style="width: 400px; height: 250px;" class="img-thumbnail w-100">
                 <p class="align-self-center">Karışık Kırmızı Meyve Suyu</p>
